fixed gutenberg align center not working

--- a/Gutenberg/src/embedpress/editor.scss
+++ b/Gutenberg/src/embedpress/editor.scss
@@ -300,8 +300,12 @@
 		max-width: 100% !important;
 	}
 }
-
-
+.editor-styles-wrapper .wp-block[data-align=center]{
+	text-align: center;
+}
+.editor-styles-wrapper .wp-block[data-align=center] > * {
+	display: inline-block;
+}
 .editor-styles-wrapper .wp-block::after {
 	content: '';
 	display: block;
